<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="record"
            type="com.example.diplom_DP.db.entity.RecordEntity" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.record.RecordActivity">

    <TextView
        android:id="@+id/date"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:importantForAutofill="no"
        android:text="@={record.date}"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/time"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="none"
        android:hint="@string/time_hint"
        android:focusable="false"
        android:importantForAutofill="no"
        android:text="@={record.timeFrom}"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@={record.title}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:text="@={record.info}"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/info"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/info"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/info" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>